# bfgi

./: CMakeLists.txt  README.md  build.sh
bfgi/: CMakeLists.txt  bfgi.c  bfgi.cpp
bfgi_lib/: CMakeLists.txt  bfg_api.h  bfg_context.c  bfg_context.h  bfg_parser.c  bfg_parser.h  bfg_program.c  bfg_program.h  bfg_stack.c  bfg_stack.h  bfgl.h  bfgl_api.h  types.h
bfgi_lib/kernels/: CMakeLists.txt  bfg_movement.c  bfg_number.c  bfg_print.c
bfgi_lib/sources/: bfg_context.c  bfg_internal.h  bfg_parser.c  bfg_program.c  bfg_stack.c
bfgi_lib/sources/kernels/: bfg_movement.c  bfg_number.c  bfg_print.c  bfg_stack_cmds.c  vx_arithmetic.c
